--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://unpkg.com/tesseract.js@4.0.2/dist/tesseract.min.js"></script>
 
     <style>
-        /* --- Diseño ORIGINAL (no tocar) --- */
+        /* --- Diseño EXACTO original (no tocar) --- */
         @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&family=Inter:wght@300;400;700;900&display=swap');
         :root{--neon-blue:#00d2ff;--deep-blue:#0072ff}
         body{background-color:#050505;color:#fff;font-family:'Inter',sans-serif;margin:0;height:100vh;display:flex;align-items:center;justify-content:center;overflow:hidden}
@@ -109,7 +109,7 @@
 </div>
 
 <script>
-/* ========== Helpers ========== */
+/* ========== Helpers & DOM ========== */
 const fileInput = document.getElementById('file-input');
 const dropzone = document.getElementById('dropzone');
 const imgPreview = document.getElementById('image-preview');
@@ -130,6 +130,7 @@ const copyDestBtn = document.getElementById('copy-dest');
 
 let base64String = '';
 
+/* Safe fetch with timeout */
 function fetchWithTimeout(url, options = {}, timeout = 12000) {
   const controller = new AbortController();
   const id = setTimeout(() => controller.abort(), timeout);
@@ -137,6 +138,7 @@ function fetchWithTimeout(url, options = {}, timeout = 12000) {
   return fetch(url, combined).finally(() => clearTimeout(id));
 }
 
+/* Copy helper */
 async function writeClipboard(text) {
   try {
     if (navigator.clipboard && navigator.clipboard.writeText) {
@@ -158,34 +160,32 @@ async function writeClipboard(text) {
   }
 }
 
-/* Parse text -> addresses + coord candidates */
-function parseTextForData(text) {
-  const out = { precio: null, recogida: null, destino: null, gps_recogida: null, gps_destino: null };
-  if (!text) return out;
+/* ----- Strict line-based parsing ----- 
+   Rule: FIRST non-empty line = RECOGIDA (exact text)
+         SECOND non-empty line = DESTINO  (exact text)
+   We still look for numeric coordinates in the OCR output; if none, geocode the addresses.
+*/
+function parseLinesStrict(text) {
+  const lines = (text || '').split('\n').map(l => l.trim()).filter(l => l.length > 2);
+  const out = { recogida: null, destino: null, gps_recogida: null, gps_destino: null, precio: null };
+  if (lines.length > 0) out.recogida = lines[0];
+  if (lines.length > 1) out.destino = lines[1];
 
+  // price extraction (best-effort)
   const priceMatch = text.match(/\$?\s?(\d{1,3}(?:[.,]\d{3})*(?:[.,]\d{1,2})?)/);
   if (priceMatch) out.precio = priceMatch[0].replace(/\s+/g, '').replace(',', '.');
 
+  // numeric coords detection: find all decimal numbers and group into pairs left-to-right
   const nums = text.match(/-?\d+\.\d+/g) || [];
   const pairs = [];
   for (let i = 0; i + 1 < nums.length; i += 2) pairs.push([nums[i], nums[i + 1]]);
   if (pairs.length >= 1) out.gps_recogida = `${Number(pairs[0][0]).toFixed(6)}, ${Number(pairs[0][1]).toFixed(6)}`;
   if (pairs.length >= 2) out.gps_destino = `${Number(pairs[1][0]).toFixed(6)}, ${Number(pairs[1][1]).toFixed(6)}`;
 
-  const lines = text.split('\n').map(l => l.trim()).filter(l => l.length > 3);
-  const addrCandidates = lines.filter(l => /calle|av\.|avenida|col\.|colonia|no\.|n\.|numero|#|street|st\.|ave\.|terminal|aeropuerto|airport|pickup|recogida|destino|destination|dropoff/i.test(l));
-  if (addrCandidates.length > 0) {
-    out.recogida = addrCandidates[0];
-    if (addrCandidates.length > 1) out.destino = addrCandidates[1];
-  } else {
-    if (lines.length > 0) out.recogida = lines[0];
-    if (lines.length > 1) out.destino = lines[1];
-  }
-
   return out;
 }
 
-/* Geocode -> "lat, lon" or null */
+/* Geocode using Nominatim (OpenStreetMap) with timeout; returns "lat, lon" string or null */
 async function geocodeAddress(address) {
   if (!address || String(address).trim().length < 3) return null;
   const url = 'https://nominatim.openstreetmap.org/search?format=json&limit=1&q=' + encodeURIComponent(address) + '&email=demo@uberprogps.app';
@@ -201,7 +201,7 @@ async function geocodeAddress(address) {
   }
 }
 
-/* OCR with timeout (Tesseract) */
+/* OCR with timeout */
 function ocrWithTimeout(src, ms = 20000) {
   return Promise.race([
     Tesseract.recognize(src, 'spa+eng', { logger: m => {/* progress */} }),
@@ -209,34 +209,25 @@ function ocrWithTimeout(src, ms = 20000) {
   ]);
 }
 
-/* Open Sygic route (iOS priority) -> fallback to Google Maps */
+/* Open Sygic route (iOS priority), fallback to Google Maps */
 function openSygicRoute(pickupCoords, dropCoords, pickupAddrText, dropAddrText) {
-  // if no coords use addresses in Google Maps
   const fallbackToGoogle = () => {
     window.open(`https://www.google.com/maps/dir/?api=1&origin=${encodeURIComponent(pickupCoords || pickupAddrText)}&destination=${encodeURIComponent(dropCoords || dropAddrText)}`, '_blank');
   };
 
   if (!dropCoords && !pickupCoords) { fallbackToGoogle(); return; }
 
-  // iOS scheme
   if (dropCoords) {
     const [dlat, dlon] = dropCoords.split(',').map(s => s.trim());
     try {
-      // Try iOS scheme (sygic)
       const sygicIOS = `sygic://coordinate|${dlat}|${dlon}`;
-      window.location = sygicIOS;
-    } catch (e) {
-      // ignore
-    }
-
-    // After short delay try Android intent then fallback
+      window.location = sygicIOS; // iOS attempt
+    } catch (e) {}
     setTimeout(() => {
       try {
         const intentUrl = `intent://coordinate|${dlat}|${dlon}#Intent;package=com.sygic.aura;scheme=sygic;end`;
         window.location = intentUrl;
-      } catch (e) {
-        // ignore
-      }
+      } catch (e) {}
       setTimeout(() => fallbackToGoogle(), 1000);
     }, 700);
   } else {
@@ -271,6 +262,7 @@ function showLoader(show = true, text = 'Sincronizando GPS') {
   }
 }
 
+/* MAIN: analyzes the image, extracts first two lines as pickup/destination */
 async function analyzeImage() {
   if (!base64String) { alert('Selecciona una imagen primero.'); return; }
 
@@ -278,33 +270,30 @@ async function analyzeImage() {
   analyzeBtn.disabled = true;
 
   try {
-    // OCR (with timeout)
     const ocrResult = await ocrWithTimeout(imgPreview.src, 20000);
     const text = (ocrResult && ocrResult.data && ocrResult.data.text) ? ocrResult.data.text : '';
 
-    // parse
-    const parsed = parseTextForData(text);
+    // Strict line-based parse: FIRST line -> pickup, SECOND -> destination (exact)
+    const parsed = parseLinesStrict(text);
 
-    // fill UI addresses from parsed
+    // Put addresses exactly as OCR gave them
     resPickupAddr.innerText = parsed.recogida || 'N/A';
     resDropAddr.innerText = parsed.destino || 'N/A';
 
-    // if OCR already provided numeric coords, use them
+    // Coordinates: use numeric candidates first, else geocode
     let gpsPickup = parsed.gps_recogida || null;
     let gpsDrop = parsed.gps_destino || null;
 
-    // otherwise geocode addresses (with timeout & graceful fail)
     if (!gpsPickup) gpsPickup = await geocodeAddress(parsed.recogida);
     if (!gpsDrop) gpsDrop = await geocodeAddress(parsed.destino);
 
     resPickupGps.innerText = gpsPickup || 'No disponible';
     resDropGps.innerText = gpsDrop || 'No disponible';
 
-    // COPY: automatic copy of PICKUP only (user requested)
+    // COPY automatic: pickup coordinate (or pickup address if no coord)
     if (gpsPickup) {
       await writeClipboard(gpsPickup);
     } else {
-      // fallback: copy pickup address text (so user always gets something)
       await writeClipboard(resPickupAddr.innerText || '');
     }
 
@@ -323,10 +312,10 @@ async function analyzeImage() {
   }
 }
 
-/* wire analyze button */
+/* Wire analyze button */
 analyzeBtn.addEventListener('click', analyzeImage);
 
-/* copy buttons (manual copy for destination) */
+/* Manual copy buttons */
 copyOriginBtn.addEventListener('click', async () => {
   const txt = resPickupGps.innerText || '';
   if (txt && txt !== '0.000000, 0.000000' && txt !== 'No disponible') await writeClipboard(txt);
@@ -336,7 +325,7 @@ copyDestBtn.addEventListener('click', async () => {
   if (txt && txt !== '0.000000, 0.000000' && txt !== 'No disponible') await writeClipboard(txt);
 });
 
-/* restart */
+/* Restart */
 btnRestart.addEventListener('click', () => {
   base64String = '';
   imgPreview.src = '';
@@ -348,10 +337,9 @@ btnRestart.addEventListener('click', () => {
   fileInput.value = '';
 });
 
-/* Internal lightweight tests (safe to run) */
+/* Lightweight internal tests (non-intrusive) */
 (async function selfTests() {
-  console.assert(typeof parseTextForData('') === 'object', 'parseTextForData returns object');
-  // geocode test: network may fail; assert doesn't throw
+  console.assert(typeof parseLinesStrict('') === 'object', 'parseLinesStrict returns object');
   try {
     const r = await geocodeAddress('Ciudad de México');
     console.assert(r === null || typeof r === 'string', 'geocode returns string or null');
