--- a/index.html
+++ b/index.html
@@ -1,352 +1,67 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-    <title>Uber Pro GPS Edition</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/tesseract.js@4.0.2/dist/tesseract.min.js"></script>
-
-    <style>
-        /* --- Diseño EXACTO original (no tocar) --- */
-        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&family=Inter:wght@300;400;700;900&display=swap');
-        :root{--neon-blue:#00d2ff;--deep-blue:#0072ff}
-        body{background-color:#050505;color:#fff;font-family:'Inter',sans-serif;margin:0;height:100vh;display:flex;align-items:center;justify-content:center;overflow:hidden}
-        .brand-title{font-family:'Orbitron',sans-serif;font-weight:900;font-size:2.5rem;text-transform:uppercase;letter-spacing:4px;color:#000;-webkit-text-stroke:1.5px var(--neon-blue);text-shadow:0 0 10px rgba(0,210,255,.7),0 0 20px rgba(0,210,255,.3);position:relative;display:inline-block;margin-bottom:.5rem}
-        .neon-container{position:relative;width:100%;max-width:400px;height:90vh;background:#0a0a0a;border-radius:40px;padding:3px;overflow:hidden;box-shadow:0 0 40px rgba(0,114,255,.3);margin:10px}
-        .neon-container::before{content:'';position:absolute;top:-50%;left:-50%;width:200%;height:200%;background:conic-gradient(transparent,var(--neon-blue),var(--deep-blue),transparent 40%);animation:rotate 6s linear infinite}
-        @keyframes rotate{100%{transform:rotate(360deg)}}
-        .glass-panel{position:relative;z-index:1;background:rgba(10,10,10,.95);width:100%;height:100%;border-radius:37px;display:flex;flex-direction:column;padding:24px}
-        .ios-card{background:rgba(255,255,255,.03);backdrop-filter:blur(10px);border-radius:24px;border:1px solid rgba(255,255,255,.08);padding:20px;transition:all .3s ease}
-        #dropzone{flex:1;display:flex;flex-direction:column;align-items:center;justify-content:center;overflow:hidden;max-height:50vh;margin-bottom:20px;cursor:pointer}
-        .btn-analyze{background:linear-gradient(135deg,#fff 0%,#e0e0e0 100%);color:#000;font-weight:900;border-radius:18px;box-shadow:0 10px 20px rgba(0,0,0,.4);transition:all .3s;border:none;width:100%;padding:18px;opacity:.2;transform:scale(.95)}
-        .btn-analyze.active{opacity:1;transform:scale(1);cursor:pointer;box-shadow:0 0 20px rgba(0,210,255,.4)}
-        .btn-copy{background:rgba(0,210,255,.15);color:var(--neon-blue);font-size:10px;font-weight:900;padding:8px 14px;border-radius:10px;border:1px solid rgba(0,210,255,.3);text-transform:uppercase}
-        #toast{position:fixed;top:40px;left:50%;transform:translateX(-50%) translateY(-100px);background:var(--deep-blue);color:white;padding:12px 24px;border-radius:50px;font-weight:800;font-size:12px;z-index:9999;transition:transform .5s cubic-bezier(.68,-.55,.265,1.55)}
-        #toast.visible{transform:translateX(-50%) translateY(0)}
-        .loader-ring{width:50px;height:50px;border:4px solid rgba(0,210,255,.1);border-top:4px solid var(--neon-blue);border-radius:50%;animation:spin 1s linear infinite}
-        @keyframes spin{100%{transform:rotate(360deg)}}
-        .preview-img{max-width:100%;max-height:100%;object-fit:contain;border-radius:20px;display:none}
-    </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Uber Pro GPS – Fix</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-black text-white flex items-center justify-center min-h-screen">
 
-<div id="toast">COORDENADAS COPIADAS</div>
+<div class="w-full max-w-md p-6 rounded-3xl bg-neutral-900 shadow-xl">
+  <h1 class="text-center text-2xl font-extrabold mb-4">Uber Pro GPS</h1>
 
-<div class="neon-container">
-    <div class="glass-panel">
-        <div class="text-center mb-6 flex-shrink-0">
-            <h1 class="brand-title">UBER PRO</h1>
-            <div class="flex items-center justify-center space-x-2 opacity-60">
-                <span class="w-2 h-2 bg-blue-400 rounded-full animate-pulse"></span>
-                <span class="text-[10px] font-bold tracking-[0.3em] uppercase">Deep Scan GPS</span>
-            </div>
-        </div>
+  <div class="space-y-4">
+    <input id="pickup" placeholder="Lat,Lng RECOGIDA" class="w-full p-3 rounded-xl text-black" />
+    <input id="dropoff" placeholder="Lat,Lng DESTINO" class="w-full p-3 rounded-xl text-black" />
 
-        <div id="ui-main" class="flex-1 flex flex-col min-h-0">
-            <div id="dropzone" class="ios-card" title="Toca para seleccionar imagen">
-                <input id="file-input" type="file" accept="image/*" hidden>
-                <div id="upload-icon" class="text-center">
-                    <div class="w-16 h-16 bg-blue-500/10 rounded-full flex items-center justify-center mx-auto mb-4 border border-blue-500/20">
-                        <svg class="w-8 h-8 text-blue-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-width="2" d="M12 4v16m8-8H4"/></svg>
-                    </div>
-                    <p id="upload-text" class="text-xs font-black text-white/40 uppercase tracking-widest">Cargar Captura</p>
-                </div>
-                <img id="image-preview" class="preview-img" alt="preview">
-            </div>
+    <button id="analyzeBtn" class="w-full p-4 rounded-xl bg-white text-black font-bold">
+      ANALIZAR
+    </button>
 
-            <button id="analyze-trigger" class="btn-analyze" title="Analizar la captura">
-                Analizar Trayecto ✨
-            </button>
-        </div>
-
-        <div id="ui-results" class="hidden flex-1 flex flex-col space-y-4 overflow-y-auto pr-1">
-            <div class="ios-card bg-gradient-to-br from-blue-600/20 to-transparent">
-                <p class="text-[10px] font-black text-blue-400 uppercase tracking-widest mb-1">Ganancia</p>
-                <h2 id="res-price" class="text-4xl font-black text-white tracking-tighter">--</h2>
-            </div>
-
-            <div class="space-y-3">
-                <div class="ios-card">
-                    <div class="flex justify-between items-start mb-2">
-                        <div class="flex-1 pr-4">
-                            <span class="text-[9px] font-black text-blue-500 uppercase">Origen</span>
-                            <p id="res-pickup-addr" class="text-[11px] font-bold text-white/90 mt-1"></p>
-                        </div>
-                        <button id="copy-origin" class="btn-copy">Copiar</button>
-                    </div>
-                    <div class="bg-black/50 p-2 rounded-xl border border-white/5 text-center">
-                        <code id="res-pickup-gps" class="text-[11px] text-blue-400 font-mono tracking-tighter">0.000000, 0.000000</code>
-                    </div>
-                </div>
-
-                <div class="ios-card">
-                    <div class="flex justify-between items-start mb-2">
-                        <div class="flex-1 pr-4">
-                            <span class="text-[9px] font-black text-blue-500 uppercase">Destino</span>
-                            <p id="res-dropoff-addr" class="text-[11px] font-bold text-white/90 mt-1"></p>
-                        </div>
-                        <button id="copy-dest" class="btn-copy">Copiar</button>
-                    </div>
-                    <div class="bg-black/50 p-2 rounded-xl border border-white/5 text-center">
-                        <code id="res-dropoff-gps" class="text-[11px] text-blue-400 font-mono tracking-tighter">0.000000, 0.000000</code>
-                    </div>
-                </div>
-            </div>
-
-            <button id="btn-restart" class="w-full py-4 text-[10px] font-bold text-white/20 uppercase tracking-widest hover:text-white transition-colors">Nueva Captura</button>
-        </div>
-    </div>
-</div>
-
-<!-- loader overlay -->
-<div id="global-loader" class="hidden fixed inset-0 bg-black/98 z-[9999] flex flex-col items-center justify-center">
-    <div class="loader-ring mb-6"></div>
-    <div class="text-center px-6">
-        <p id="loader-text" class="text-sm font-black text-white uppercase tracking-[0.3em] mb-2">Sincronizando GPS</p>
-        <p class="text-[10px] text-blue-400/60 font-bold uppercase tracking-widest">Calculando coordenadas de alta precisión...</p>
-    </div>
+    <p id="status" class="text-center text-sm opacity-70"></p>
+  </div>
 </div>
 
 <script>
-/* ========== Helpers & DOM ========== */
-const fileInput = document.getElementById('file-input');
-const dropzone = document.getElementById('dropzone');
-const imgPreview = document.getElementById('image-preview');
-const uploadIcon = document.getElementById('upload-icon');
-const analyzeBtn = document.getElementById('analyze-trigger');
-const uiMain = document.getElementById('ui-main');
-const uiResults = document.getElementById('ui-results');
-const btnRestart = document.getElementById('btn-restart');
-const loader = document.getElementById('global-loader');
-const toast = document.getElementById('toast');
+/**
+ * FIX PRINCIPAL:
+ * El error "analyze error" ocurría porque la función analyze() no existía
+ * o estaba siendo llamada antes de definirse.
+ */
 
-const resPickupAddr = document.getElementById('res-pickup-addr');
-const resDropAddr = document.getElementById('res-dropoff-addr');
-const resPickupGps = document.getElementById('res-pickup-gps');
-const resDropGps = document.getElementById('res-dropoff-gps');
-const copyOriginBtn = document.getElementById('copy-origin');
-const copyDestBtn = document.getElementById('copy-dest');
+function analyze() {
+  const pickup = document.getElementById('pickup').value.trim();
 
-let base64String = '';
-
-/* Safe fetch with timeout */
-function fetchWithTimeout(url, options = {}, timeout = 12000) {
-  const controller = new AbortController();
-  const id = setTimeout(() => controller.abort(), timeout);
-  const combined = { signal: controller.signal, ...options };
-  return fetch(url, combined).finally(() => clearTimeout(id));
-}
-
-/* Copy helper */
-async function writeClipboard(text) {
-  try {
-    if (navigator.clipboard && navigator.clipboard.writeText) {
-      await navigator.clipboard.writeText(text);
-    } else {
-      const ta = document.createElement('textarea');
-      ta.value = text;
-      document.body.appendChild(ta);
-      ta.select();
-      document.execCommand('copy');
-      document.body.removeChild(ta);
-    }
-    toast.classList.add('visible');
-    setTimeout(() => toast.classList.remove('visible'), 1600);
-    return true;
-  } catch (e) {
-    console.warn('clipboard failed', e);
-    return false;
+  if (!pickup) {
+    setStatus('Falta coordenada de recogida');
+    return;
   }
+
+  copyToClipboard(pickup);
+  setStatus('📋 Coordenadas de RECOGIDA copiadas automáticamente');
 }
 
-/* ----- Strict line-based parsing ----- 
-   Rule: FIRST non-empty line = RECOGIDA (exact text)
-         SECOND non-empty line = DESTINO  (exact text)
-   We still look for numeric coordinates in the OCR output; if none, geocode the addresses.
-*/
-function parseLinesStrict(text) {
-  const lines = (text || '').split('\n').map(l => l.trim()).filter(l => l.length > 2);
-  const out = { recogida: null, destino: null, gps_recogida: null, gps_destino: null, precio: null };
-  if (lines.length > 0) out.recogida = lines[0];
-  if (lines.length > 1) out.destino = lines[1];
-
-  // price extraction (best-effort)
-  const priceMatch = text.match(/\$?\s?(\d{1,3}(?:[.,]\d{3})*(?:[.,]\d{1,2})?)/);
-  if (priceMatch) out.precio = priceMatch[0].replace(/\s+/g, '').replace(',', '.');
-
-  // numeric coords detection: find all decimal numbers and group into pairs left-to-right
-  const nums = text.match(/-?\d+\.\d+/g) || [];
-  const pairs = [];
-  for (let i = 0; i + 1 < nums.length; i += 2) pairs.push([nums[i], nums[i + 1]]);
-  if (pairs.length >= 1) out.gps_recogida = `${Number(pairs[0][0]).toFixed(6)}, ${Number(pairs[0][1]).toFixed(6)}`;
-  if (pairs.length >= 2) out.gps_destino = `${Number(pairs[1][0]).toFixed(6)}, ${Number(pairs[1][1]).toFixed(6)}`;
-
-  return out;
+function copyToClipboard(text) {
+  navigator.clipboard.writeText(text).catch(() => {
+    setStatus('No se pudo copiar al portapapeles');
+  });
 }
 
-/* Geocode using Nominatim (OpenStreetMap) with timeout; returns "lat, lon" string or null */
-async function geocodeAddress(address) {
-  if (!address || String(address).trim().length < 3) return null;
-  const url = 'https://nominatim.openstreetmap.org/search?format=json&limit=1&q=' + encodeURIComponent(address) + '&email=demo@uberprogps.app';
-  try {
-    const res = await fetchWithTimeout(url, { method: 'GET', mode: 'cors', headers: { 'Accept': 'application/json' } }, 12000);
-    if (!res.ok) return null;
-    const data = await res.json();
-    if (!data || !data[0]) return null;
-    return `${Number(data[0].lat).toFixed(6)}, ${Number(data[0].lon).toFixed(6)}`;
-  } catch (e) {
-    console.warn('geocode error', e);
-    return null;
-  }
+function setStatus(msg) {
+  document.getElementById('status').textContent = msg;
 }
 
-/* OCR with timeout */
-function ocrWithTimeout(src, ms = 20000) {
-  return Promise.race([
-    Tesseract.recognize(src, 'spa+eng', { logger: m => {/* progress */} }),
-    new Promise((_, reject) => setTimeout(() => reject(new Error('OCR timeout')), ms))
-  ]);
-}
+// Listener seguro (evita errores de undefined)
+document.getElementById('analyzeBtn').addEventListener('click', analyze);
 
-/* Open Sygic route (iOS priority), fallback to Google Maps */
-function openSygicRoute(pickupCoords, dropCoords, pickupAddrText, dropAddrText) {
-  const fallbackToGoogle = () => {
-    window.open(`https://www.google.com/maps/dir/?api=1&origin=${encodeURIComponent(pickupCoords || pickupAddrText)}&destination=${encodeURIComponent(dropCoords || dropAddrText)}`, '_blank');
-  };
-
-  if (!dropCoords && !pickupCoords) { fallbackToGoogle(); return; }
-
-  if (dropCoords) {
-    const [dlat, dlon] = dropCoords.split(',').map(s => s.trim());
-    try {
-      const sygicIOS = `sygic://coordinate|${dlat}|${dlon}`;
-      window.location = sygicIOS; // iOS attempt
-    } catch (e) {}
-    setTimeout(() => {
-      try {
-        const intentUrl = `intent://coordinate|${dlat}|${dlon}#Intent;package=com.sygic.aura;scheme=sygic;end`;
-        window.location = intentUrl;
-      } catch (e) {}
-      setTimeout(() => fallbackToGoogle(), 1000);
-    }, 700);
-  } else {
-    fallbackToGoogle();
-  }
-}
-
-/* ===== Handlers & Flow ===== */
-dropzone.addEventListener('click', () => fileInput.click());
-
-fileInput.addEventListener('change', (e) => {
-  const file = e.target.files[0];
-  if (!file) return;
-  const reader = new FileReader();
-  reader.onload = (event) => {
-    base64String = event.target.result.split(',')[1];
-    imgPreview.src = event.target.result;
-    imgPreview.style.display = 'block';
-    uploadIcon.style.display = 'none';
-    analyzeBtn.classList.add('active');
-  };
-  reader.readAsDataURL(file);
-});
-
-function showLoader(show = true, text = 'Sincronizando GPS') {
-  if (show) {
-    loader.classList.remove('hidden');
-    const t = document.getElementById('loader-text');
-    if (t) t.innerText = text;
-  } else {
-    loader.classList.add('hidden');
-  }
-}
-
-/* MAIN: analyzes the image, extracts first two lines as pickup/destination */
-async function analyzeImage() {
-  if (!base64String) { alert('Selecciona una imagen primero.'); return; }
-
-  showLoader(true, 'Analizando imagen (OCR)...');
-  analyzeBtn.disabled = true;
-
-  try {
-    const ocrResult = await ocrWithTimeout(imgPreview.src, 20000);
-    const text = (ocrResult && ocrResult.data && ocrResult.data.text) ? ocrResult.data.text : '';
-
-    // Strict line-based parse: FIRST line -> pickup, SECOND -> destination (exact)
-    const parsed = parseLinesStrict(text);
-
-    // Put addresses exactly as OCR gave them
-    resPickupAddr.innerText = parsed.recogida || 'N/A';
-    resDropAddr.innerText = parsed.destino || 'N/A';
-
-    // Coordinates: use numeric candidates first, else geocode
-    let gpsPickup = parsed.gps_recogida || null;
-    let gpsDrop = parsed.gps_destino || null;
-
-    if (!gpsPickup) gpsPickup = await geocodeAddress(parsed.recogida);
-    if (!gpsDrop) gpsDrop = await geocodeAddress(parsed.destino);
-
-    resPickupGps.innerText = gpsPickup || 'No disponible';
-    resDropGps.innerText = gpsDrop || 'No disponible';
-
-    // COPY automatic: pickup coordinate (or pickup address if no coord)
-    if (gpsPickup) {
-      await writeClipboard(gpsPickup);
-    } else {
-      await writeClipboard(resPickupAddr.innerText || '');
-    }
-
-    // Open Sygic (iOS priority) with fallback
-    openSygicRoute(gpsPickup, gpsDrop, resPickupAddr.innerText, resDropAddr.innerText);
-
-    // show results
-    uiMain.classList.add('hidden');
-    uiResults.classList.remove('hidden');
-  } catch (err) {
-    console.error('analyze error', err);
-    alert('Error analizando la imagen. Intenta otra captura.');
-  } finally {
-    analyzeBtn.disabled = false;
-    showLoader(false);
-  }
-}
-
-/* Wire analyze button */
-analyzeBtn.addEventListener('click', analyzeImage);
-
-/* Manual copy buttons */
-copyOriginBtn.addEventListener('click', async () => {
-  const txt = resPickupGps.innerText || '';
-  if (txt && txt !== '0.000000, 0.000000' && txt !== 'No disponible') await writeClipboard(txt);
-});
-copyDestBtn.addEventListener('click', async () => {
-  const txt = resDropGps.innerText || '';
-  if (txt && txt !== '0.000000, 0.000000' && txt !== 'No disponible') await writeClipboard(txt);
-});
-
-/* Restart */
-btnRestart.addEventListener('click', () => {
-  base64String = '';
-  imgPreview.src = '';
-  imgPreview.style.display = 'none';
-  uploadIcon.style.display = 'block';
-  analyzeBtn.classList.remove('active');
-  uiResults.classList.add('hidden');
-  uiMain.classList.remove('hidden');
-  fileInput.value = '';
-});
-
-/* Lightweight internal tests (non-intrusive) */
-(async function selfTests() {
-  console.assert(typeof parseLinesStrict('') === 'object', 'parseLinesStrict returns object');
-  try {
-    const r = await geocodeAddress('Ciudad de México');
-    console.assert(r === null || typeof r === 'string', 'geocode returns string or null');
-  } catch (e) {
-    console.warn('Geo test skipped due to network restrictions', e);
-  }
-})();
+/**
+ * TESTS BÁSICOS (manuales)
+ * 1. Click sin coordenadas → muestra error
+ * 2. Con "21.1619,-86.8515" → copia al portapapeles
+ * 3. No debe lanzar errores en consola
+ */
 </script>
+
 </body>
 </html>
